# fastapi-mvc

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: constants.py  db_init.bash  db_init.py  dev.bash  load_env.source  main.py  migration_manager.sh  prod.sh  web.py
app/controllers/: __init__.py  auth_controller.py  base_controller.py  page_controller.py  private_controller.py  user_controller.py
app/core/: config.py  db_context.py  dependencies.py  lifespan.py  templates.py
app/db/: context.py  user_db.py
app/exceptions/: handler.py  scheme.py
app/mappers/: user_mapper.py
app/middlewares/: __init__.py  auth_middleware.py  cors_middleware.py  static_middleware.py
app/migrations/: env.py
app/models/: __init__.py  db.py  dto.py  enums.py  other.py
app/repos/: user_repo.py
app/repositories/: __init__.py  base_repository.py  example_repository.py  token_repository.py  user_repository.py
app/routers/: __init__.py  api_router.py  auth_router.py  base_router.py  error_page_router.py  private_pages_router.py  public_pages_router.py
app/services/: __init__.py  base_service.py  example_service.py  jwt_service.py  token_jwt_service.py  token_service.py  user_service.py
app/templates/: 403.html  404.html  auth.jinja  error.jinja  forgot.html  login.html  main.html  main.jinja  private.html  register.html
app/utils/: __init__.py  background_schedule_task.py  bcrypt_hashing.py  db_context.py  dependencies.py  formating.py  hashing.py  pages.py  sha256_hashing.py  validators.py
(+9 files in other folders)
