[project]
name = "fastapi-mvc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.2",
    "apscheduler>=3.11.0",
    "bcrypt>=4.3.0",
    "fastapi[standard]>=0.115.12",
    "jinja2>=3.1.6",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "pymysql>=1.1.1",
    "sqlalchemy>=2.0.40",
]
